--- a/src/components/ui/Cart/Cart.module.css
+++ b/src/components/ui/Cart/Cart.module.css
@@ -7,7 +7,8 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: flex-end;
-  z-index: 1000;
+  z-index: 2000;
+  backdrop-filter: blur(5px);
   animation: fadeIn 0.3s ease;
 }
 
